--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ header {
     color: #6050DC;
 }
 
-.popup #close {
+.popup .close {
     position: absolute;
     top: 4%;
     right: 6%;
@@ -111,7 +111,7 @@ header {
     font-size: 2vh;
 }
 
-.popup #close:hover {
+.popup .close:hover {
     color: rgb(255, 121, 121);
 }
 
