--- a/page/style.css
+++ b/page/style.css
@@ -120,3 +120,77 @@ main {
   width: 90%;
   height: 90%;
 }
+
+@media only screen and (max-aspect-ratio: 1/1) {
+
+  .pages {
+    display: none;
+    background-color: rgb(100, 100, 100);
+    width: 40%;
+    height: 50%;
+    padding: 4%;
+    bottom: 10vh;
+    border-radius: 0 5vh 0 0;
+    left: 0;
+  }
+
+  .pages a {
+    color: #fff;
+  }
+
+  .posts {
+    height: 1000vh;
+    margin-top: 10vh;
+  }
+
+  .post {
+    width: 95%;
+  }
+
+  .menu-btn {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    height: 5vh;
+    bottom: 2vh;
+    left: 2vh;
+  }
+  
+  .line {
+    width: 8vw;
+    height: .5vh;
+    background-color:  #fff;
+    margin-top: 20%;
+  }
+
+  #clock {
+    display: none;
+  }
+
+  footer {
+    margin: 0;
+    width: 100%;
+    height: 10vh;
+    background-color:  rgb(100, 100, 100);
+  }
+
+  #create_btn {
+    display: none;
+  }
+
+  #create_btn2 {
+    width: 50vw;
+    bottom: 1vh;
+  }
+
+  .pages-flex {
+    flex: 0;
+    margin-left: 0;
+  }
+  
+  .make-post {
+    flex: 0;
+  }
+
+}
